* revert OrdersOverviewController table filling to old method